syntax = "proto3";

package partyaffairs.api.partyaffairs.information.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "partyaffairs.api.partyaffairs.information.v1";
option java_outer_classname = "InformationV1";

import "validate/validate.proto";

message GetInformationRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message GetInformationReply {
  message Classify{
    uint32 id = 1;
    string name =2;
  }
  uint32 id = 1;
  uint32 classifyId = 2;
  string title = 3;
  string description = 4;
  string cover = 5;
  string unit = 6;
  string content = 7;
  optional bool isTop = 8;
  optional bool status = 9;
  uint32 read = 10;
  Classify classify = 11;
  uint32 createdAt = 12;
  uint32 updatedAt = 13;
}

message ListInformationRequest {
  uint32 page = 1[(validate.rules).uint32 = {gte: 1}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gte: 1,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","is_top","created_at","updated_at"]}];
  optional string title = 5[(validate.rules).string = {min_len: 1,max_len: 40}];
  optional bool isTop = 6;
  optional bool status = 7;
  optional uint32 classifyId = 8;
}

message ListInformationReply {
  message Classify{
    uint32 id = 1;
    string name =2;
  }
  message Information {
    uint32 id = 1;
    uint32 classifyId = 2;
    string title = 3;
    string description = 4;
    string cover = 5;
    string unit = 6;
    optional bool isTop = 7;
    optional bool status = 8;
    uint32 read = 9;
    Classify classify = 10;
    uint32 createdAt = 11;
    uint32 updatedAt = 12;
  }
  uint32 total = 1;
  repeated Information list = 2;
}

message CreateInformationRequest {
  uint32 classifyId = 1;
  string title = 2[(validate.rules).string = {max_len: 40,min_len: 1}];
  string description = 3[(validate.rules).string = {min_len: 1}];
  string cover = 4[(validate.rules).string = {min_len: 1}];
  string unit = 5[(validate.rules).string = {min_len: 1}];
  string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  uint32 read = 9;
}

message CreateInformationReply {
  uint32 id = 1;
}

message UpdateInformationRequest {
  uint32 id = 1;
  uint32 classifyId = 10;
  string title = 2[(validate.rules).string = {max_len: 40}];
  string description = 3;
  string cover = 4;
  string unit = 5;
  string content = 6;
  optional bool isTop = 7;
  optional bool status = 8;
  optional uint32 read = 9;
}

message UpdateInformationReply {
}

message DeleteInformationRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte: 1}];
}

message DeleteInformationReply {
}

