syntax = "proto3";

package partyaffairs.api.partyaffairs.information.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "partyaffairs.api.partyaffairs.information.v1";
option java_outer_classname = "InformationV1";

import "google/api/annotations.proto";
import "api/partyaffairs/information/partyaffairs_information.proto";
import "api/partyaffairs/information/partyaffairs_information_classify.proto";

service Information{

  // ListInformationClassify 获取资讯分组列表
  rpc ListInformationClassify (ListInformationClassifyRequest) returns (ListInformationClassifyReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/information/classifies",
      additional_bindings:{
        get: "/partyaffairs/client/v1/information/classifies",
      }
    };
  }

  // CreateInformationClassify 创建资讯分组
  rpc CreateInformationClassify (CreateInformationClassifyRequest) returns (CreateInformationClassifyReply) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/information/classify",
      body: "*"
    };
  }

  // UpdateInformationClassify 更新资讯分组
  rpc UpdateInformationClassify (UpdateInformationClassifyRequest) returns (UpdateInformationClassifyReply) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/information/classify",
      body: "*"
    };
  }

  // DeleteInformationClassify 删除资讯分组
  rpc DeleteInformationClassify (DeleteInformationClassifyRequest) returns (DeleteInformationClassifyReply) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/information/classify",
    };
  }
  
  // GetInformation 获取指定的咨询信息
  rpc GetInformation (GetInformationRequest) returns (GetInformationReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/information",
      additional_bindings:{
        get: "/partyaffairs/client/v1/information",
      }
    };
  }

  // ListInformation 获取咨询信息列表
  rpc ListInformation (ListInformationRequest) returns (ListInformationReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/informations",
      additional_bindings:{
        get: "/partyaffairs/client/v1/informations",
      }
    };
  }

  // CreateInformation 创建咨询信息
  rpc CreateInformation (CreateInformationRequest) returns (CreateInformationReply) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/information",
      body: "*"
    };
  }

  // UpdateInformation 更新咨询信息
  rpc UpdateInformation (UpdateInformationRequest) returns (UpdateInformationReply) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/information",
      body: "*"
    };
  }

  // DeleteInformation 删除咨询信息
  rpc DeleteInformation (DeleteInformationRequest) returns (DeleteInformationReply) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/information",
    };
  }

}